// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User Menu should show homepage link, when provided 1`] = `
<pf-layout-wrapper-header
  dropdownNavigationLinks={[Function Array]}
  featureFlagService={[Function Object]}
  homePageLink={[Function Object]}
  payscaleBrandingFeatureFlag={[Function Object]}
  unsubscribe$={[Function Subject]}
  userContext={[Function Object]}
>
  <nav
    class="navbar navbar-expand navbar-dark fixed-top"
  >
    
    <a
      class="navbar-brand mr-auto"
      href="url"
    >
      <img
        class="logo-style"
        src="Img Src"
      />
    </a>
    
    <pf-notification-badge />
    <pf-layout-wrapper-user-menu />
  </nav>
</pf-layout-wrapper-header>
`;

exports[`User Menu should show the header 1`] = `
<pf-layout-wrapper-header
  dropdownNavigationLinks={[Function Array]}
  featureFlagService={[Function Object]}
  payscaleBrandingFeatureFlag={[Function Object]}
  unsubscribe$={[Function Subject]}
  userContext={[Function Object]}
>
  <nav
    class="navbar navbar-expand navbar-dark fixed-top"
  >
    
    <a
      class="navbar-brand mr-auto"
      href=""
    >
      <img
        class="logo-style"
        src="null"
      />
    </a>
    
    <pf-notification-badge />
    <pf-layout-wrapper-user-menu />
  </nav>
</pf-layout-wrapper-header>
`;
